@@ -17,6 +17,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.slf4j:slf4j-api:2.0.16'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.16'
+    testImplementation 'org.hamcrest:hamcrest:3.0'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -26,8 +28,9 @@ java {
     }
 }
 
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
+test {
+    jvmArgs(["--enable-native-access=ALL-UNNAMED"])
     useJUnitPlatform()
+    testLogging.showStandardStreams = true
 }
 
